syntax = "proto3";

package service;

option go_package = "github.com/calmato/gran-book/proto";

// ChatRoom - チャットルーム
message ChatRoom {
  string id = 1; // チャットルームID
  repeated string user_ids = 2; // 参加者ID一覧
  string created_at = 3; // 作成日時
  string updated_at = 4; // 更新日
  ChatMessage latest_message = 5; // 最新のメッセージ
}

// ChatMessage - チャットメッセージ
message ChatMessage {
  string id = 1; // チャットメッセージID
  string user_id = 2; // ユーザーID
  string text = 3; // テキストメッセージ
  string image = 4; // 添付画像
  string created_at = 5; // 送信日
}
