syntax = "proto3";

package proto;

option go_package = "github.com/calmato/gran-book/proto";

service ChatService {
  rpc ListRoom(ListChatRoomRequest) returns (ChatRoomListResponse);
  rpc CreateRoom(CreateChatRoomRequest) returns (ChatRoomResponse);
  rpc CreateMessage(CreateChatMessageRequest) returns (ChatMessageResponse);
  rpc UploadImage(stream UploadChatImageRequest) returns (ChatMessageResponse);
}

message ListChatRoomRequest {
  string user_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message CreateChatRoomRequest {
  repeated string user_ids = 1;
}

message CreateChatMessageRequest {
  string room_id = 1;
  string text = 2;
}

message UploadChatImageRequest {
  string room_id = 1;
  bytes image = 2;
  int64 position = 3;
}

message ChatRoomResponse {
  string id = 1;
  repeated string user_ids = 2;
  string created_at = 3;
  string updated_at = 4;
}

message ChatRoomListResponse {
  message Message {
    string user_id = 1;
    string text = 2;
    string image = 3;
    string created_at = 4;
  }
  message Room {
    string id = 1;
    repeated string user_ids = 2;
    Message latestMessage = 3;
  }
  repeated Room rooms = 1;
}

message ChatMessageResponse {
  string id = 1;
  string user_id = 2;
  string text = 3;
  string image = 4;
  string created_at = 5;
}
